# gitignite

./: .gitignore  .gitignore.bak  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: tests.yml
ignite/: analyzer.py  audit.py  cli.py  doctor.py  fixer.py  gitignore.py  registry.py
ignite/detectors/: jupyter_detector.py  node_detector.py  python_detector.py  vscode_detector.py
ignite/rules/: jupyter.py  node.py  python.py  vscode.py
ignite_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_docker_detector.py  test_doctor.py  test_doctor_ci.py  test_gitignore.py  test_jupyter_detector.py  test_node_detector.py  test_python_detector.py  test_terraform_detector.py  test_vscode_detector.py
