[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ignite-cli"
version = "0.1.0"
description = "Smart Git hygiene for modern projects."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "sirishapadmasekhar" }
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0"
]

[project.scripts]
ignite = "ignite.cli:app"