[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ignite-cli"
version = "0.4.0"
description = "Smart Git hygiene for modern projects."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
{ name = "Sirisha Padmasekhar" }
]

keywords = [
"git",
"gitignore",
"cli",
"developer-tools",
"git-hygiene",
"automation"
]

classifiers = [
"Development Status :: 3 - Alpha",
"Intended Audience :: Developers",
"License :: OSI Approved :: MIT License",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.9",
"Programming Language :: Python :: 3.10",
"Programming Language :: Python :: 3.11",
"Environment :: Console",
"Topic :: Software Development :: Version Control :: Git",
]

dependencies = [
"typer>=0.12.0",
"rich>=13.0.0"
]

[project.urls]
Homepage = "https://github.com/sirishapadmasekhar/gitignite"
Repository = "https://github.com/sirishapadmasekhar/gitignite"
Issues = "https://github.com/sirishapadmasekhar/gitignite/issues"

[project.scripts]
ignite = "ignite.cli:app"
